tests/NormalTests/paczka1/fuzzy1/21223389.err
Error in line 3: MaPK A928 30,6
Error in line 9: auc S965 64,7
Error in line 18: v7c A928 87,0
Error in line 10: r1P S81 84,5
Error in line 23: r1P S965 94,7
